# gymbilletter

./: .env  Cargo.toml  README.md
migrations/2018-05-13-190806_create_parties/: down.sql  up.sql
migrations/2018-05-14-121246_users/: up.sql
migrations/2018-05-24-070223_sign_up/: up.sql
src/: admin.rs  auth.rs  database.rs  main.rs  party.rs  people.rs  schema.rs  user.rs
static/: party.css
templates/: index.tera  login.tera  new_party.tera  party.tera
