[package]
name = "gymbilletter"
version = "0.1.0"
authors = ["Polly Nielsen Boutet-Livoff <pollyboutet@gmail.com>"]

[dependencies]
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_contrib = { version = "0.3.10", default-features = false, features = ["tera_templates"] }
diesel = { version = "1.3", features = ["postgres", "r2d2", "uuid"] }
uuid = "0.6.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
